Pint Changelog
==============

0.24 (unreleased)
-----------------

- Added dBW, decibel Watts, which is used in RF high power applications
- NumPy 2.0 support
  (PR #1985, #1971)
- Implement numpy roll (Related to issue #981)
- Add `dim_sort` function to _formatter_helpers.
- Add `dim_order` and `default_sort_func` properties to FullFormatter.
  (PR #1926, fixes Issue #1841)
- Fixed bug causing operations between arrays of quantity scalars and quantity holding
  array resulting in incorrect units.
  (PR #1677)
- Fix LaTeX siuntix formatting when using non_int_type=decimal.Decimal.
- Added refractive index units.
  (PR #1816)
- Fix converting to offset units of higher dimension e.g. gauge pressure
  (PR #1949)
- Fix unhandled TypeError when auto_reduce_dimensions=True and non_int_type=Decimal
  (PR #1853)
- Improved error message in `get_dimensionality()` when non existent units are passed.
  (PR #1874, Issue #1716)


0.23 (2023-12-08)
-----------------

- Add _get_conversion_factor to registry with cache.
- Homogenize input and ouput of internal regitry functions to
  facility typing, subclassing and wrapping.
  (_yield_unit_triplets, )
- Generated downstream_status page to track the
  state of downstream projects.
- Improve typing annotation.
- Updated to flexparser 0.2.
- Faster wraps
  (PR #1862)
- Add codspeed github action.
- Move benchmarks to pytest-benchmarks.
- Support pytest on python 3.12 wrt Fraction formatting change
  (#1818)
- Fixed Transformation type protocol.
  (PR #1805, PR #1832)
- Documented to_preferred and created added an autoautoconvert_to_preferred registry option.
  (PR #1803)
- Enable Pint to parse uncertainty numbers.
  (See #1611, #1614)
- Optimize matplotlib unit conversion for Quantity arrays
  (PR #1819)
- Add numpy.linalg.norm implementation.
  (PR #1251)

0.22 (2023-05-25)
-----------------

- Drop Python 3.8 compatability following NEP-29.
- Drop NumPy < 1.21 following NEP-29.
- Improved typing experience.