@@ -4,6 +4,7 @@ Pint Changelog
 0.24 (unreleased)
 -----------------
 
+- Fix detection of invalid conversion between offset and delta units. (PR #1905)
 - Added dBW, decibel Watts, which is used in RF high power applications
 - NumPy 2.0 support
   (PR #1985, #1971)
